# g-less

./: CMakeLists.txt  README  README.md
cmake/vala/: UseVala.cmake
src/: g_less.vala
ui/: g_less.ui
